UnityProjectDP/Assets/Scripts/AnimationControl/OAL/OALParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from OAL.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class OALParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		RELATIONSHIP_SPECIFICATION=74, BOOL=75, NAME=76, STRING=77, NUM=78, COMMENT=79, 
		WHITE_SPACE=80;
	public const int
		RULE_lines = 0, RULE_line = 1, RULE_parCommand = 2, RULE_ifCommand = 3, 
		RULE_whileCommand = 4, RULE_foreachCommand = 5, RULE_continueCommand = 6, 
		RULE_breakCommand = 7, RULE_commentCommand = 8, RULE_exeCommandQueryCreate = 9, 
		RULE_exeCommandQueryRelate = 10, RULE_exeCommandQuerySelect = 11, RULE_exeCommandQuerySelectRelatedBy = 12, 
		RULE_exeCommandQueryDelete = 13, RULE_exeCommandQueryUnrelate = 14, RULE_exeCommandAssignment = 15, 
		RULE_exeCommandCall = 16, RULE_exeCommandCreateList = 17, RULE_exeCommandAddingToList = 18, 
		RULE_exeCommandWrite = 19, RULE_exeCommandRead = 20, RULE_expr = 21, RULE_instanceHandle = 22, 
		RULE_instanceName = 23, RULE_keyLetter = 24, RULE_whereExpression = 25, 
		RULE_start = 26, RULE_className = 27, RULE_variableName = 28, RULE_methodName = 29, 
		RULE_attribute = 30, RULE_string = 31, RULE_relationshipLink = 32, RULE_relationshipSpecification = 33;
	public static readonly string[] ruleNames = {
		"lines", "line", "parCommand", "ifCommand", "whileCommand", "foreachCommand", 
		"continueCommand", "breakCommand", "commentCommand", "exeCommandQueryCreate", 
		"exeCommandQueryRelate", "exeCommandQuerySelect", "exeCommandQuerySelectRelatedBy", 
		"exeCommandQueryDelete", "exeCommandQueryUnrelate", "exeCommandAssignment", 
		"exeCommandCall", "exeCommandCreateList", "exeCommandAddingToList", "exeCommandWrite", 
		"exeCommandRead", "expr", "instanceHandle", "instanceName", "keyLetter", 
		"whereExpression", "start", "className", "variableName", "methodName", 
		"attribute", "string", "relationshipLink", "relationshipSpecification"
	};

	private static readonly string[] _LiteralNames = {
		null, "'par'", "'thread'", "'end thread'", "';'", "'end par'", "'if'", 
		"'elif'", "'('", "')'", "'else'", "'end if'", "'while'", "'end while'", 
		"'for each '", "' in '", "'end for'", "'continue'", "'break'", "'create object instance '", 
		"' of '", "'create object instance of '", "'relate '", "' to '", "' across '", 
		"'select any '", "' from instances of '", "' where '", "'select many '", 
		"' related by '", "'->'", "'delete object instance '", "'unrelate '", 
		"' from '", "'assign '", "'='", "'.'", "'()'", "','", "'call from '", 
		"'::'", "'() to '", "'create list '", "'{'", "'}'", "'add '", "'write('", 
		"'read('", "'int(read('", "'))'", "'real(read('", "'bool(read('", "'cardinality '", 
		"'empty '", "'not_empty '", "'-'", "'*'", "'/'", "'%'", "'+'", "'<'", 
		"'>'", "'<='", "'>='", "'=='", "'!='", "'not '", "'NOT '", "' and '", 
		"' AND '", "' or '", "' OR '", "'['", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "RELATIONSHIP_SPECIFICATION", "BOOL", "NAME", "STRING", "NUM", 
		"COMMENT", "WHITE_SPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "OAL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static OALParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public OALParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public OALParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class LinesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(OALParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public LinesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lines; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterLines(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitLines(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLines(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LinesContext lines() {
		LinesContext _localctx = new LinesContext(Context, State);
		EnterRule(_localctx, 0, RULE_lines);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 68;
				line();
				}
				}
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__11) | (1L << T__13) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << T__33) | (1L << T__38) | (1L << T__41) | (1L << T__44) | (1L << T__45))) != 0) || _la==NAME || _la==COMMENT );
			State = 73;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandQueryCreateContext exeCommandQueryCreate() {
			return GetRuleContext<ExeCommandQueryCreateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandQueryRelateContext exeCommandQueryRelate() {
			return GetRuleContext<ExeCommandQueryRelateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandQuerySelectContext exeCommandQuerySelect() {
			return GetRuleContext<ExeCommandQuerySelectContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandQuerySelectRelatedByContext exeCommandQuerySelectRelatedBy() {
			return GetRuleContext<ExeCommandQuerySelectRelatedByContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandQueryDeleteContext exeCommandQueryDelete() {
			return GetRuleContext<ExeCommandQueryDeleteContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandQueryUnrelateContext exeCommandQueryUnrelate() {
			return GetRuleContext<ExeCommandQueryUnrelateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandAssignmentContext exeCommandAssignment() {
			return GetRuleContext<ExeCommandAssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandCallContext exeCommandCall() {
			return GetRuleContext<ExeCommandCallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandCreateListContext exeCommandCreateList() {
			return GetRuleContext<ExeCommandCreateListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandAddingToListContext exeCommandAddingToList() {
			return GetRuleContext<ExeCommandAddingToListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandWriteContext exeCommandWrite() {
			return GetRuleContext<ExeCommandWriteContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandReadContext exeCommandRead() {
			return GetRuleContext<ExeCommandReadContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContinueCommandContext continueCommand() {
			return GetRuleContext<ContinueCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BreakCommandContext breakCommand() {
			return GetRuleContext<BreakCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhileCommandContext whileCommand() {
			return GetRuleContext<WhileCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfCommandContext ifCommand() {
			return GetRuleContext<IfCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ForeachCommandContext foreachCommand() {
			return GetRuleContext<ForeachCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParCommandContext parCommand() {
			return GetRuleContext<ParCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentCommandContext commentCommand() {
			return GetRuleContext<CommentCommandContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			State = 94;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 75;
				exeCommandQueryCreate();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 76;
				exeCommandQueryRelate();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 77;
				exeCommandQuerySelect();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 78;
				exeCommandQuerySelectRelatedBy();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 79;
				exeCommandQueryDelete();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 80;
				exeCommandQueryUnrelate();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 81;
				exeCommandAssignment();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 82;
				exeCommandCall();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 83;
				exeCommandCreateList();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 84;
				exeCommandAddingToList();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 85;
				exeCommandWrite();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 86;
				exeCommandRead();
				}
				break;
			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 87;
				continueCommand();
				}
				break;
			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 88;
				breakCommand();
				}
				break;
			case 15:
				EnterOuterAlt(_localctx, 15);
				{
				State = 89;
				whileCommand();
				}
				break;
			case 16:
				EnterOuterAlt(_localctx, 16);
				{
				State = 90;
				ifCommand();
				}
				break;
			case 17:
				EnterOuterAlt(_localctx, 17);
				{
				State = 91;
				foreachCommand();
				}
				break;
			case 18:
				EnterOuterAlt(_localctx, 18);
				{
				State = 92;
				parCommand();
				}
				break;
			case 19:
				EnterOuterAlt(_localctx, 19);
				{
				State = 93;
				commentCommand();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParCommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ParCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parCommand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterParCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitParCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParCommandContext parCommand() {
		ParCommandContext _localctx = new ParCommandContext(Context, State);
		EnterRule(_localctx, 4, RULE_parCommand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96;
			Match(T__0);
			State = 97;
			Match(T__1);
			State = 99;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 98;
				line();
				}
				}
				State = 101;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__11) | (1L << T__13) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << T__33) | (1L << T__38) | (1L << T__41) | (1L << T__44) | (1L << T__45))) != 0) || _la==NAME || _la==COMMENT );
			State = 103;
			Match(T__2);
			State = 104;
			Match(T__3);
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 105;
				Match(T__1);
				State = 107;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 106;
					line();
					}
					}
					State = 109;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__11) | (1L << T__13) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << T__33) | (1L << T__38) | (1L << T__41) | (1L << T__44) | (1L << T__45))) != 0) || _la==NAME || _la==COMMENT );
				State = 111;
				Match(T__2);
				State = 112;
				Match(T__3);
				}
				}
				State = 116;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__1 );
			State = 118;
			Match(T__4);
			State = 119;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfCommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public IfCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifCommand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterIfCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitIfCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfCommandContext ifCommand() {
		IfCommandContext _localctx = new IfCommandContext(Context, State);
		EnterRule(_localctx, 6, RULE_ifCommand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			Match(T__5);
			State = 122;
			expr(0);
			State = 126;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__11) | (1L << T__13) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << T__33) | (1L << T__38) | (1L << T__41) | (1L << T__44) | (1L << T__45))) != 0) || _la==NAME || _la==COMMENT) {
				{
				{
				State = 123;
				line();
				}
				}
				State = 128;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 140;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__6) {
				{
				{
				State = 129;
				Match(T__6);
				State = 130;
				Match(T__7);
				State = 131;
				expr(0);
				State = 132;
				Match(T__8);
				State = 134;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 133;
					line();
					}
					}
					State = 136;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__11) | (1L << T__13) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << T__33) | (1L << T__38) | (1L << T__41) | (1L << T__44) | (1L << T__45))) != 0) || _la==NAME || _la==COMMENT );
				}
				}
				State = 142;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 149;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__9) {
				{
				State = 143;
				Match(T__9);
				State = 145;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 144;
					line();
					}
					}
					State = 147;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__11) | (1L << T__13) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << T__33) | (1L << T__38) | (1L << T__41) | (1L << T__44) | (1L << T__45))) != 0) || _la==NAME || _la==COMMENT );
				}
			}

			State = 151;
			Match(T__10);
			State = 152;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhileCommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public WhileCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whileCommand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterWhileCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitWhileCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhileCommandContext whileCommand() {
		WhileCommandContext _localctx = new WhileCommandContext(Context, State);
		EnterRule(_localctx, 8, RULE_whileCommand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 154;
			Match(T__11);
			State = 155;
			Match(T__7);
			State = 156;
			expr(0);
			State = 157;
			Match(T__8);
			State = 159;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 158;
				line();
				}
				}
				State = 161;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__11) | (1L << T__13) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << T__33) | (1L << T__38) | (1L << T__41) | (1L << T__44) | (1L << T__45))) != 0) || _la==NAME || _la==COMMENT );
			State = 163;
			Match(T__12);
			State = 164;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
